crates/aether-actor-derive/tests/ui/rejects_stray_const_wasm.stderr
error: #[actor] impl WasmActor for X accepts only `const NAMESPACE: &'static str = …` — the `Addressable` super-trait carries no other authorable const
  --> tests/ui/rejects_stray_const_wasm.rs:28:5
   |
28 |     const BUFFER_CAPACITY: usize = 64;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
